gui/Emulation/Native.cs


    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_q_pram_load(IntPtr h, byte[] data, nuint len, uint addSeconds);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_q_attach_cd(IntPtr h, int attached, int busId);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_q_cd_attached(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_q_insert_cd(IntPtr h, byte[] img, nuint len);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_q_eject_cd(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_q_cd_present(IntPtr h);

    // ---- Macintosh IIfx (separate omac_fx_* handle) ----
    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr omac_fx_create(byte[] rom, nuint romLen, uint ramMb);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr omac_fx_create_with_video_rom(
        byte[] rom, nuint romLen, byte[]? videoRom, nuint videoRomLen,
        uint ramMb);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_destroy(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_reset(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_run_frame(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_screen_w(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_screen_h(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_render(IntPtr h, byte[] argb);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint omac_fx_audio_rate(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern nuint omac_fx_drain_audio(IntPtr h, byte[] outBuf, nuint cap);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_mouse(IntPtr h, int dx, int dy, int button);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_key(IntPtr h, int adbCode, int down);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_insert_floppy(IntPtr h, byte[] img,
                                                    nuint len, int readOnly);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_eject_floppy(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_floppy_present(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern nuint omac_fx_floppy_writeback(IntPtr h, byte[]? outBuf,
                                                         nuint cap);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_insert_harddisk(IntPtr h, byte[] img,
                                                       nuint len, int readOnly);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_detach_harddisk(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern nuint omac_fx_harddisk_data(IntPtr h, byte[]? outBuf, nuint cap);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_shutdown_harddisk(IntPtr h);

    // The second SCSI seat (ID 1, drive 5): transfer and folder disks.
    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_insert_harddisk2(IntPtr h, byte[] img, nuint len, int readOnly);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_detach_harddisk2(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern nuint omac_fx_harddisk2_data(IntPtr h, byte[]? outBuf, nuint cap);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_harddisk2_booted(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_unmount_harddisk2(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_attach_cd(IntPtr h, int attached, int busId);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_cd_attached(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_insert_cd(IntPtr h, byte[] img, nuint len);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_eject_cd(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_cd_present(IntPtr h);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern nuint omac_fx_pram_save(IntPtr h, byte[]? outBuf, nuint cap);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern int omac_fx_pram_load(IntPtr h, byte[] data, nuint len,
                                                uint addSeconds);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern nuint omac_fx_diagnostics(IntPtr h, byte[]? outBuf, nuint cap);

    [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
    public static extern void omac_fx_poll_log(IntPtr h, byte[] outBuf, nuint cap);
}
